--- a/contacts.html
+++ b/contacts.html
@@ -34,15 +34,15 @@
                 <ul class="content-list">
                     <li class="content-list__item">
                         <h2 class="title-2">Location</h2>
-                        <p>Moscow, Russia</p>
+                        <p>Ufa, Russia</p>
                     </li>
                     <li class="content-list__item">
                         <h2 class="title-2">Telegram / WhatsApp</h2>
-                        <p><a href="tel:+79051234567">+7 (905) 123-45-67</a></p>
+                        <p><a href="tel:+7 (919) 147-03-79">+79191470379</a></p>
                     </li>
                     <li class="content-list__item">
                         <h2 class="title-2">Email</h2>
-                        <p><a href="mailto:webdev@protonmail.com">webdev@protonmail.com</a></p>
+                        <p><a href="mailto:pi269097@gmail.com">pi269097@gmail.com</a></p>
                     </li>
                 </ul>
 
