--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,7 @@
                     </li>
                     <li class="content-list__item">
                         <h2 class="title-2">Telegram / WhatsApp</h2>
-                        <p><a href="tel:+7 (919) 147-03-79">+79191470379</a></p>
+                        <p><a href="tel:+7 (919) 147-03-79">+7 (919) 147-03-79</a></p>
                     </li>
                     <li class="content-list__item">
                         <h2 class="title-2">Email</h2>
