--- a/project-page.html
+++ b/project-page.html
@@ -39,7 +39,7 @@
                     <p>Skills: React, Node.js, MongoDB</p>
                 </div>
 
-                <a href="#!" class="btn-outline">
+                <a href="https://github.com/NikitaGareev" class="btn-outline">
                     <img src="img/icons/gitHub-black.svg" alt="">
                     GitHub repo
                 </a>
