--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         <div class="container">
             <div class="footer__wrapper">
                 <ul class="social">
-                    <li class="social__item"><a href="#!"><img src="img/icons/vk.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="img/icons/instagram.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="img/icons/twitter.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="https://github.com/NikitaGareev/Junior_dep.git"><img src="img/icons/gitHub.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="img/icons/linkedIn.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://vk.com/"><img src="img/icons/vk.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://instagram.com/"><img src="img/icons/instagram.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://twitter.com/"><img src="img/icons/twitter.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://github.com"><img src="img/icons/gitHub.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://linkedIn.com"><img src="img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
                     <p>© 2022 frontend-dev.com</p>
